[package]
name = "cyberjew"
version = "0.1.0"
authors = ["ilerik <erik.lite@gmail.com>"]

[dependencies]
# errors
error-chain = "*"
log = "*"

# Backend agnostic AI/ML framework
# greenglas = "*" # greenglas = { git = "https://github.com/spearow/greenglas.git" }
# juice = "*" # juice = { git = "https://github.com/spearow/juice.git", default-features = false }
# coaster = "*" # coaster = { git = "https://github.com/spearow/coaster.git", default-features = false }

# Tokio
futures = "*"
hyper = "0.11.2"
tokio-core = "*"

# json
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

# utils
pretty_env_logger = "*"
toml = "0.4.5"

# Telegram Bot API integration
# telegram-bot = "0.5"

# Graph database API
rusted_cypher = "*"
github-rs = "0.6"

[features]
# default = ["native"]
# native = ["juice/native", "coaster/native"]
# opencl = ["juice/opencl", "coaster/opencl"]
# cuda = ["juice/cuda", "coaster/cuda"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2